--- a/_config.yml
+++ b/_config.yml
@@ -1,16 +1,16 @@
 # Site settings
-title: 读立写生
+title: 你找到我了
 header-img: "img/green.jpg"
 tagline: "cn"  
-description: "陈素封|读而立·写而生"  
+description: "高也|见心明志"  
 baseurl: ""
 url: "http://cnfeat"  
 
 # About/contact
 owner: 
-  name: " CnFeat"
-  email: CnFeat@gmail.com
-  bio: "写就是写的报酬"
+  name: " knightgao"
+  email: 910642912@qq.com
+  bio: "秋浦"
 
 # Data
 gavatar: http://dreamofbook.qiniudn.com/Az..png
